--- a/FrontApp/css/style.css
+++ b/FrontApp/css/style.css
@@ -21,7 +21,6 @@ body {
 .container {
   max-width: 768px;
   margin: 0 auto;
-  margin-left: 570px;
 }
 
 main .sidebar-body {
@@ -56,7 +55,7 @@ main .sidebar-body form input {
   border-radius: 4px;
   width: 310px;
   background: var(--main-color);
-  color: #fff;
+  color: #FFF;
   margin-bottom: 24px;
 }
 main .sidebar-body::-webkit-scrollbar {
@@ -65,6 +64,7 @@ main .sidebar-body::-webkit-scrollbar {
 main .sidebar-body::-webkit-scrollbar {
   display: none !important;
 }
+
 
 .Bo {
   display: inline-flex;
@@ -152,6 +152,10 @@ span.open {
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+}
+
+.cont-box {
+  margin-left: 20px;
 }
 
 @media (max-width: 1460px) {
