--- a/FrontApp/css/style.scss
+++ b/FrontApp/css/style.scss
@@ -173,6 +173,10 @@ span.open {
   -o-border-radius: 4px;
 }
 
+.cont-box{
+  margin-left: 20px;
+}
+
 @media(max-width:1460px) {
   .sidebar-body {
     display: none ;
