--- a/FrontApp/css/style.scss
+++ b/FrontApp/css/style.scss
@@ -16,6 +16,10 @@ body {
   color: rgb(250, 250, 250);
   background-color: var(--main-color);
   min-width: 640px !important;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .container {
@@ -173,12 +177,12 @@ span.open {
   -o-border-radius: 4px;
 }
 
-.cont-box{
+.cont-box {
   margin-left: 20px;
 }
 
 @media(max-width:1460px) {
   .sidebar-body {
-    display: none ;
+    display: none;
   }
 }
