--- a/backend/views/email/welcome.pug
+++ b/backend/views/email/welcome.pug
@@ -3,4 +3,4 @@ extends baseEmail
 block content
   p Hi #{name},
   p Welcome to Atom, we're glad to have you 🎉🙏
-  p We're all a big familiy here, so make sure to upload your user photo so we get to know you a bit better!
+  p We're all a big familiy here
