--- a/FrontApp/css/style.scss
+++ b/FrontApp/css/style.scss
@@ -27,29 +27,29 @@ body {
   margin: 0 auto;
 }
 
-header{
+header {
   position: absolute;
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 2;;;
+  z-index: 2;
   background: #1e2430;
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-    box-shadow: 0px 0px 23px -6px red;
-    a{
-      text-decoration: none;
-      color: #FFF;;
-      font-size: 18px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+  box-shadow: 0px 0px 23px -6px red;
+  a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+  }
+  button {
+    background: transparent;
+    border: none;
+    a {
+      text-decoration: underline;
     }
-    button{
-      background: transparent;
-      border: none;;
-      a{
-        text-decoration: underline;
-      }
-    }
+  }
 }
 
 main {
@@ -68,8 +68,6 @@ main {
     width: 21rem;
     z-index: 1;
     margin-left: 0px;
-    ;
-
     .heaeder-sidebar {
       h3 {
         margin-bottom: 8px;
@@ -92,7 +90,7 @@ main {
         border-radius: 4px;
         width: 310px;
         background: var(--main-color);
-        color: #FFF;
+        color: #fff;
         margin-bottom: 24px;
       }
     }
@@ -105,9 +103,7 @@ main {
       display: none !important;
     }
   }
-
 }
-
 
 /*# sourceMappingURL=style.css.map */
 
@@ -179,7 +175,7 @@ main {
   color: rgb(85, 26, 139);
 }
 
-.close {
+.closeSide {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -208,12 +204,11 @@ span.open {
   margin-left: 20px;
 }
 
-@media(max-width:1460px) {
+@media (max-width: 1460px) {
   .sidebar-body {
     display: none;
   }
 }
-
 
 .h2-title {
   text-align: center;
@@ -225,7 +220,8 @@ span.open {
   margin: 150px auto;
   width: 500px;
 
-  label {}
+  label {
+  }
 
   input,
   button {
@@ -240,7 +236,7 @@ span.open {
     border: none;
     outline: none;
     background: red;
-    color: #FFF;
+    color: #fff;
     font-size: 16px;
     font-weight: bold;
 
@@ -248,19 +244,16 @@ span.open {
       color: #00000048;
     }
 
-    &[type='submit'] {
+    &[type="submit"] {
       // margin-top: 12px;
       // margin-bottom: 22px;
       cursor: pointer;
     }
 
     a {
-      
-      color: #FFF;
+      color: #fff;
       text-decoration: none;
       cursor: pointer;
     }
   }
-
-
 }
