--- a/FrontApp/css/style.css
+++ b/FrontApp/css/style.css
@@ -37,6 +37,9 @@ header {
   display: flex;
   justify-content: space-around;
   box-shadow: 0px 0px 23px -6px red;
+  /* min-width: 200%; */
+  width: -webkit-fill-available;
+  min-width: 640px !important;
 }
 header a {
   text-decoration: none;
@@ -50,7 +53,9 @@ header button {
 header button a {
   text-decoration: underline;
 }
-
+.sidebar-body {
+  min-height: 102vh;
+}
 main .sidebar-body {
   z-index: 1;
   top: 69px;
@@ -199,7 +204,7 @@ span.open {
 
 .form {
   margin: 150px auto;
-  width: 500px;
+  max-width: 500px;
 }
 .form input,
 .form button {
@@ -284,11 +289,11 @@ span.open {
 
 @media (max-width: 500px) {
   main {
-    width: fit-content !important;
+    /* width: fit-content !important; */
   }
   form {
-    width: fit-content;
-    margin: 150px 0 !important;
+    /* width: fit-content; */
+    margin: 150px auto !important;
   }
 }
 
